@@ -17,6 +17,7 @@
 [+] Gestionnaire de médias: tri des dossiers dans le déroulant 'Dossier'
 [+] plxPlugin: ajout de la fonction setAdminMenu pour personnaliser le menu permettant d'accèder à la page admin.php d'un plugin
 [+] Ajout du paramètre thumbs dans le fichier de configuration de PluXml pour création ou pas des miniatures
+[+] plxShow:pageTitle() : positionnement du titre du site en dernier pour améliorer les référencements (contribution Jos)
 [-] plxShow: suppression de la méthode artCatId()
 [-] Administration: Paramètres > Configuration avancée -> Suppression du choix de l'emplacement des fichiers .xml
 BUG Pas d'affichage des articles affectés à plusieurs catégories si une catégorie est inactive
